--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,21 @@
          "sourceType": "module"
     },
     "extends": ["eslint:recommended", "prettier"],
+    "plugins": [
+      "prettier"
+    ],
     "env": { 
          "es2021": true,
          "node": true
     },
     "rules": {
-    
+      "prettier/prettier": [
+        "warn"
+      ],
+      "no-unused-vars": "warn",
+      "no-debugger": "warn",
+      "no-plusplus": "off",
+      "no-param-reassign": "off",
+      "no-unused-expressions": "warn"
     }
 }
