--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,18 @@
 {
-  "trailingComma": "es5",
+  "printWidth": 120,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "proseWrap": "never",
   "tabWidth": 4,
-  "semi": false,
-  "singleQuote": true
+  "useTabs": true,
+  "endOfLine": "auto",
+  "overrides": [
+    {
+      "files": ".prettierrc",
+      "options": {
+        "parser": "json"
+      }
+    }
+  ]
 }
