--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Be",
+    "name": "Backend expressJs",
     "version": "1.0.0",
     "description": "AirSence 20212",
     "main": "server.js",
@@ -28,6 +28,7 @@
         "eslint": "^8.13.0",
         "eslint-config-prettier": "^8.5.0",
         "prettier": "^2.6.2",
-        "sequelize-cli": "^6.4.1"
+        "sequelize-cli": "^6.4.1",
+        "eslint-plugin-prettier": "^4.0.0"
     }
 }
