--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
         "winston": "^3.7.2"
     },
     "devDependencies": {
-        "prettier": "^2.6.2",
         "eslint": "^8.13.0",
-        "eslint-config-prettier": "^8.5.0"
+        "eslint-config-prettier": "^8.5.0",
+        "prettier": "^2.6.2",
+        "sequelize-cli": "^6.4.1"
     }
 }
