AIRSENCE-12 : setup project add init database

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ STATUS = 'development'
 MYSQL_HOST = 'localhost'
 MYSQL_USER = 'root'
 MYSQL_PASSWORD = 'phungvansyhb'
-MYSQL_DB = 'dbtest'
+MYSQL_DB = 'airsense'
 HEADER_TOKEN_KEY= 'x-access-token'
 
 # Port config
