--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,40 @@
 {
-    "root": true,
-    "parserOptions": {
-         "ecmaVersion": 12,
-         "sourceType": "module"
-    },
-    "extends": ["eslint:recommended", "prettier"],
-    "plugins": [
-      "prettier"
-    ],
-    "env": { 
-         "es2021": true,
-         "node": true
-    },
-    "rules": {
-      "prettier/prettier": [
-        "warn"
-      ],
-      "no-unused-vars": "warn",
-      "no-debugger": "warn",
-      "no-plusplus": "off",
-      "no-param-reassign": "off",
-      "no-unused-expressions": "warn"
-    }
+	"parserOptions": {
+		"ecmaVersion": 2020
+	},
+	"extends": ["eslint:recommended", "prettier"],
+	"plugins": ["prettier"],
+	"env": {
+		"browser": true,
+		"es6": true,
+		"node": true
+	},
+	"rules": {
+		"camelcase": ["error"],
+		"no-unreachable": ["error"],
+		"no-global-assign": ["error"],
+		"no-self-compare": ["error"],
+		"prettier/prettier": ["warn"],
+		"no-unused-vars": "warn",
+		"no-debugger": "warn",
+		"no-plusplus": "off",
+		"no-param-reassign": "off",
+		"no-shadow-restricted-names": ["error"],
+		"no-use-before-define": [
+			"error",
+			{
+				"functions": false
+			}
+		],
+		"no-useless-computed-key": ["error"],
+		"no-useless-rename": ["error"],
+		"no-var": ["error"],
+		"object-shorthand": ["error", "always"],
+		"prefer-arrow-callback": ["error"],
+		"prefer-const": ["error"],
+		"prefer-numeric-literals": ["error"],
+		"prefer-rest-params": ["error"],
+		"prefer-spread": ["error"],
+		"rest-spread-spacing": ["error", "never"],
+	}
 }
