--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-    "name": "Backend expressJs",
-    "version": "1.0.0",
-    "description": "AirSence 20212",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "format:check": "prettier --check .",
-        "format:write": "prettier --write .",
-        "lint:check": "eslint .",
-        "lint:fix": "eslint --fix ."
-    },
-    "keywords": [],
-    "author": "Phung Van Sy + Pham Trong Phung + Vu Van Dai + Phan Ha Duy + Tran Khuong Duy",
-    "license": "ISC",
-    "dependencies": {
-        "dotenv": "^16.0.0",
-        "express": "^4.17.3",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.2.10",
-        "mqtt": "^4.3.7",
-        "mysql2": "^2.3.3",
-        "nodemon": "^2.0.15",
-        "sequelize": "^6.19.0",
-        "winston": "^3.7.2"
-    },
-    "devDependencies": {
-        "eslint": "^8.13.0",
-        "eslint-config-prettier": "^8.5.0",
-        "prettier": "^2.6.2",
-        "sequelize-cli": "^6.4.1",
-        "eslint-plugin-prettier": "^4.0.0"
-    }
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "AirSence 20212",
+	"main": "server.js",
+	"scripts": {
+		"dev": "set NODE_ENV=development && nodemon --delay 3 server.js",
+		"test": "set NODE_ENV=test && node server.js",
+		"prod": "set NODE_ENV=production && node server.js",
+		"format:check": "prettier --check .",
+		"format:write": "prettier --write .",
+		"lint:check": "eslint .",
+		"lint:fix": "eslint --fix ."
+	},
+	"keywords": [],
+	"author": "Phung Van Sy + Pham Trong Phung + Vu Van Dai + Phan Ha Duy + Tran Khuong Duy",
+	"license": "ISC",
+	"dependencies": {
+		"db-migrate": "^0.11.13",
+		"db-migrate-mysql": "^2.2.0",
+		"dotenv": "^16.0.0",
+		"express": "^4.17.3",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.2.10",
+		"mqtt": "^4.3.7",
+		"mysql2": "^2.3.3",
+		"nodemon": "^2.0.15",
+		"sequelize": "^6.19.0",
+		"winston": "^3.7.2"
+	},
+	"devDependencies": {
+		"eslint": "^8.13.0",
+		"eslint-config-prettier": "^8.5.0",
+		"prettier": "^2.6.2",
+		"eslint-plugin-prettier": "^4.0.0"
+	}
 }
