--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,6 @@
 		"prefer-numeric-literals": ["error"],
 		"prefer-rest-params": ["error"],
 		"prefer-spread": ["error"],
-		"rest-spread-spacing": ["error", "never"],
+		"rest-spread-spacing": ["error", "never"]
 	}
 }
