--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
 		"node": true
 	},
 	"rules": {
-		"camelcase": ["error"],
+		"camelcase": ["warn"],
 		"no-unreachable": ["error"],
 		"no-global-assign": ["error"],
 		"no-self-compare": ["error"],
@@ -20,6 +20,8 @@
 		"no-plusplus": "off",
 		"no-param-reassign": "off",
 		"no-shadow-restricted-names": ["error"],
+    "no-duplicate-imports": "error",
+    "no-restricted-imports": "error",
 		"no-use-before-define": [
 			"error",
 			{
