--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"author": "Phung Van Sy + Pham Trong Phung + Vu Van Dai + Phan Ha Duy + Tran Khuong Duy",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.20.0",
 		"db-migrate": "^0.11.13",
 		"db-migrate-mysql": "^2.2.0",
 		"dotenv": "^16.0.0",
@@ -31,7 +32,7 @@
 	"devDependencies": {
 		"eslint": "^8.13.0",
 		"eslint-config-prettier": "^8.5.0",
-		"prettier": "^2.6.2",
-		"eslint-plugin-prettier": "^4.0.0"
+		"eslint-plugin-prettier": "^4.0.0",
+		"prettier": "^2.6.2"
 	}
 }
