--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ MYSQL_USER = 'root'
 MYSQL_PASSWORD = 'phungvansyhb'
 MYSQL_DB = 'airsense'
 HEADER_TOKEN_KEY= 'x-access-token'
+JWT_SECRET_KEY = 'airsense2021'
 
 # Port config
-PROD_PORT = 
+PROD_PORT =
 DEV_PORT = 3001
