--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"description": "AirSence 20212",
-	"main": "server.js",
-	"scripts": {
-		"dev": "set NODE_ENV=development && nodemon --delay 3 server.js",
-		"test": "set NODE_ENV=test && node server.js",
-		"prod": "set NODE_ENV=production && node server.js",
-		"format:check": "prettier --check .",
-		"format:write": "prettier --write .",
-		"lint:check": "eslint .",
-		"lint:fix": "eslint --fix ."
-	},
-	"keywords": [],
-	"author": "Phung Van Sy + Pham Trong Phung + Vu Van Dai + Phan Ha Duy + Tran Khuong Duy",
-	"license": "ISC",
-	"dependencies": {
-		"body-parser": "^1.20.0",
-		"db-migrate": "^0.11.13",
-		"db-migrate-mysql": "^2.2.0",
-		"dotenv": "^16.0.0",
-		"express": "^4.17.3",
-		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.2.10",
-		"mqtt": "^4.3.7",
-		"mysql2": "^2.3.3",
-		"nodemon": "^2.0.15",
-		"sequelize": "^6.19.0",
-		"winston": "^3.7.2"
-	},
-	"devDependencies": {
-		"eslint": "^8.13.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-prettier": "^4.0.0",
-		"prettier": "^2.6.2"
-	}
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "AirSence 20212",
+  "main": "server.js",
+  "scripts": {
+    "migrate:mysql": "db-migrate up -e mysql",
+    "migrate:mongo": "db-migrate up -e mongo",
+    "dev": "nodemon --delay 3 server.js",
+    "start": "db-migrate up -e mysql && pm2-runtime start ecosystem.config.js"
+  },
+  "keywords": [],
+  "author": "Phung Van Sy + Pham Trong Phung + Vu Van Dai + Phan Ha Duy + Tran Khuong Duy",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "db-migrate": "^0.11.13",
+    "db-migrate-mysql": "^2.2.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.10",
+    "mqtt": "^4.3.7",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.19.0",
+    "winston": "^3.7.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^5.1.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2"
+  }
 }
