--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "db-migrate-mysql": "^2.2.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongoose": "^6.2.10",
     "mqtt": "^4.3.7",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
     "sequelize": "^6.19.0",
+    "uuid": "^8.3.2",
     "winston": "^3.7.2"
   },
   "devDependencies": {
