AIRSENCE-47 : update sql migration

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ MYSQL_PASSWORD = 'xxxx'
 MYSQL_DB = 'airsense'
 JWT_SECRET_KEY = 'yyyyy'
 PORT = 3001
+
+SERVER_URL = "x.x.xx.x"
+SYSTEM_EMAIL = "airsense20212@gmail.com"
+SYSTEM_EMAIL_ID=""
+SYSTEM_EMAIL_SECRET=""
+SYSTEM_EMAIL_REFRESH_TOKEN=""
+SYSTEM_EMAIL_ACCESS_TOKEN=""
