--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "db-migrate-mysql": "^2.2.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "googleapis": "^100.0.0",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
