--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Phung Van Sy + Pham Trong Phung + Vu Van Dai + Phan Ha Duy + Tran Khuong Duy",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.107.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
@@ -25,6 +26,8 @@
     "md5": "^2.3.0",
     "mongoose": "^6.2.10",
     "mqtt": "^4.3.7",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
