AIRSENCE-84 : Minor fixes to user login and register service.

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ MYSQL_DB = 'airsense'
 JWT_SECRET_KEY = 'yyyyy'
 PORT = 3001
 
-SERVER_URL = "x.x.xx.x"
+APP_SERVER_URL = "http://18.117.163.89:3001"
 SYSTEM_EMAIL = 'airsense20212@gmail.com'
 SYSTEM_CLIENT_ID='694216659010-fsf9febn4duvqgmh0rfqfut99ud6v1r6.apps.googleusercontent.com'
 SYSTEM_CLIENT_SECRET='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'
