--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
-    "nodemailer": "^6.7.5",
+    "nodemailer": "^6.9.4",
     "nodemon": "^2.0.15",
     "pg": "^8.11.1",
     "postgresql": "^0.0.1",
+    "read-excel-file": "^5.6.1",
     "sequelize": "^6.19.0",
     "uuid": "^8.3.2",
     "winston": "^3.7.2"
