--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ STATUS = 'development'
 MYSQL_HOST = '14.225.205.222'
 MYSQL_USER = 'hieubap'
 MYSQL_PASSWORD = 'Aikhocnoidaunay.1'
-MYSQL_DB = 'web3_patient'
+MYSQL_DB = 'galadinner'
 JWT_SECRET_KEY = 'yyyyy'
 PORT = 3001
 
