--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-s3": "^3.107.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "db-migrate": "^0.11.13",
     "db-migrate-mysql": "^2.2.0",
     "db-migrate-pg": "^1.3.0",
